fixed some code inspections