@@ -1,33 +1,26 @@
 package se.montesmites.ekonomi.parser.vismaadmin200.v2015_0;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-import se.montesmites.ekonomi.model.AccountId;
-import se.montesmites.ekonomi.model.Currency;
-import se.montesmites.ekonomi.model.Entry;
-import se.montesmites.ekonomi.model.EntryStatus;
-import static se.montesmites.ekonomi.model.EntryStatus.Status.ACTIVE;
-import se.montesmites.ekonomi.model.EventId;
-import se.montesmites.ekonomi.model.Series;
-import se.montesmites.ekonomi.model.YearId;
-import static se.montesmites.ekonomi.parser.vismaadmin200.DataType.CURRENCY;
-import static se.montesmites.ekonomi.parser.vismaadmin200.DataType.INTEGER;
-import static se.montesmites.ekonomi.parser.vismaadmin200.DataType.STRING;
+import se.montesmites.ekonomi.model.*;
 import se.montesmites.ekonomi.parser.vismaadmin200.Field;
 import se.montesmites.ekonomi.parser.vismaadmin200.Record;
 
+import java.util.List;
+import java.util.Optional;
+
+import static se.montesmites.ekonomi.model.EntryStatus.Status.ACTIVE;
+import static se.montesmites.ekonomi.parser.vismaadmin200.DataType.*;
+
 public class BinaryFile_2015_0_Entries extends BinaryFile_2015_0<Entry> {
 
-    public BinaryFile_2015_0_Entries() {
+    BinaryFile_2015_0_Entries() {
         super("VERRAD.DBF", 642, 162);
     }
-    private final Field<String> YEARID = new Field("yearid", STRING, 0, 1);
-    private final Field<String> SERIES = new Field("series", STRING, 150, 1);
-    private final Field<String> FLAGS = new Field("flags", STRING, 1, 4);
-    private final Field<String> ACCOUNT = new Field("account", STRING, 24, 4);
-    private final Field<Currency> AMOUNT = new Field("mnt", CURRENCY, 28, 14);
-    private final Field<Integer> ID = new Field("id", INTEGER, 5, 7) {
+    private final Field<String> YEARID = new Field<>("yearid", STRING, 0, 1);
+    private final Field<String> SERIES = new Field<>("series", STRING, 150, 1);
+    private final Field<String> FLAGS = new Field<>("flags", STRING, 1, 4);
+    private final Field<String> ACCOUNT = new Field<>("account", STRING, 24, 4);
+    private final Field<Currency> AMOUNT = new Field<>("mnt", CURRENCY, 28, 14);
+    private final Field<Integer> ID = new Field<>("id", INTEGER, 5, 7) {
         @Override
         public boolean filter(Record record) {
             return super.filter(record) && ID.extract(record) > 0;
@@ -47,7 +40,7 @@ public class BinaryFile_2015_0_Entries extends BinaryFile_2015_0<Entry> {
 
     @Override
     List<Field<?>> getFields() {
-        return Arrays.asList(YEARID, ID, SERIES, FLAGS, ACCOUNT, AMOUNT);
+        return List.of(YEARID, ID, SERIES, FLAGS, ACCOUNT, AMOUNT);
     }
 
     @Override
